# WasmCord

./: .gitignore  LICENSE_MIT  README.md  index.js  manifest.json
example/: Cargo.toml  README.md  build.js  makefile  package.json
example/src/: lib.rs
example/src/commands/: emoji.rs  flip.rs  fw.rs  mod.rs  nozws.rs  reverse.rs  small.rs  smaller.rs  zwsit.rs
example/texter/: plugin.js  plugin.wasm
plugins/plugin/: plugin.js  plugin.wasm
