[package]
name = "texter"
version = "0.1.0"
authors = ["Tricked <72335827+SkyBlockDev@users.noreply.github.com>"]
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
serde_json = "1.0.32"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = { version = "0", features = ["serde-serialize"] }
wee_alloc = { version = "0.4.5" }


[profile.release]
lto = true
opt-level = "s"
